fixing many settings pages, horrible on mobile

--- a/dev/css/index-styles.css
+++ b/dev/css/index-styles.css
@@ -91,9 +91,8 @@ footer {
 	line-height: 3em;
 	min-height: 3em;
 	text-align: center;
-	position:absolute;
-	bottom:0px;
-	width:100%;
+	position: absolute;
+	width: 100%;
 }
 
 footer p {
@@ -107,7 +106,14 @@ footer a {
 footer a:hover {
 	color: #E3C00C;
 }
+
+@media screen and (max-width: 767px) {
+	footer { bottom:-15em;}
+}
+
 /* End Footer Code */
+
+
 /* This is code for main content, making the footer not overlap any of it */
 div.scrollable {
 	overflow: auto;
@@ -147,9 +153,6 @@ video {
 }
 .stopfade { 
    opacity: .5;
-}
-@media screen and (max-width: 767px) {
-  footer { bottom:-15em;}
 }
 
 @media screen and (max-width: 408px) {
@@ -204,29 +207,6 @@ h1 {
 h2 {
 	text-align: center;
 	text-shadow: .5px .5px #888;
-}
-
-footer {
-	background-color: gray;
-	color: white;
-	line-height: 3em;
-	min-height: 3em;
-	text-align: center;
-	/*position: relative;
-	bottom: 0px;*/
-	width: 100%;
-}
-
-footer p {
-	margin: 0;
-}
-
-footer a {
-	color: white;
-}
-
-footer a:hover {
-	color: #E3C00C;
 }
 
 img.snm {
